--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <!-- Your code here -->
+     <img
+       src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+     />
+     <img src="https://www.pexels.com/photo/blue-bmw-sedan-near-green-lawn-grass-170811/" alt="My car's type">
+     <img src="https://www.pexels.com/photo/silver-bmw-car-on-parking-area-452099/" alt="My car's type" title="Silver BMW-Sedan">
   </body>
 </html>
